# nvHive

./: .gitignore  CHANGELOG.md  EULA.md  README.md  install-mac.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CLAUDE_CODE_INTEGRATION.md  COMMANDS.md  DEPLOY_NO_ROOT.md  GETTING_STARTED.md  GPU_DETECTION.md  NEMOCLAW.md  NVIDIA_DEVELOPER_BRIEF.md  OPENCLAW_MIGRATION.md  PROVIDERS.md  RELEASING.md  TROUBLESHOOTING_WINDOWS.md  capture_gif.mjs
nvh/: __init__.py  jupyter.py
nvh/api/: proxy.py  server.py
nvh/cli/: main.py  repl.py  setup.py
nvh/core/: agent_git.py  agent_guardrails.py  agent_loop.py  agent_matching.py  agent_memory.py  agent_pr.py  agent_protocol.py  agent_report.py  agent_review.py  agent_testgen.py  agentic.py  autonomous.py  browser_tools.py  code_analysis.py  code_graph.py  cost_tracker.py  council.py  docker_sandbox.py  drift_detector.py  engine.py  iterative_loop.py  model_manager.py  parallel_pipeline.py  quality_benchmark.py  recursive_agents.py  rollback.py  smart_query.py  smoke_test.py  snapshot.py  tools.py  vision_tools.py  workspace.py
nvh/integrations/: service.py
nvh/providers/: ollama_provider.py
nvh/storage/: repository.py
nvh/utils/: gpu.py  gpu_emulation.py
scripts/: demo-agent.sh  demo-migration.sh  demo-terminal.sh  install.sh  portable-setup.sh
tests/: test_agent_loop_context.py  test_agent_loop_deep.py  test_agent_matching.py  test_agent_modules.py  test_agent_pr.py  test_agentic.py  test_api.py  test_auth.py  test_autonomous.py  test_browser_tools.py  test_cli_e2e.py  test_cli_inprocess.py  test_code_analysis.py  test_code_graph.py  test_code_graph_deep.py  test_concurrency.py  test_core_modules.py  test_cost_tracker.py  test_coverage_80_batch1.py  test_coverage_80_batch2.py  test_coverage_80_batch3.py  test_coverage_80_batch4.py  test_coverage_80_batch5.py  test_coverage_80_batch6.py  test_coverage_80_batch7.py  test_coverage_90_batch8.py  test_coverage_90_batch9.py  test_coverage_boost.py  test_coverage_deep.py  test_docker_sandbox.py  test_drift_detector.py  test_drift_integration.py  test_engine_deep.py  test_final_push_a.py  test_final_push_b.py  test_final_push_c.py  test_final_push_d.py  test_final_push_e.py  test_final_push_f.py  test_final_push_g.py  (+29 more)
vscode-nvhive/: README.md  package.json
vscode-nvhive/src/: extension.ts  panel.ts
web/app/: page.tsx
web/app/council/: page.tsx
web/app/providers/: page.tsx
web/app/query/: page.tsx
web/app/setup/: page.tsx
web/components/: ChatInput.tsx  CouncilPanel.tsx  QueryInput.tsx
web/lib/: api.ts  types.ts  useProviderHealth.ts
