[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvhive"
version = "0.27.5"
description = "NVHive — Multi-LLM orchestration platform with intelligent routing, hive consensus, and auto-agent generation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "NVHive Contributors" }]
keywords = ["llm", "ai", "nvidia", "gpu", "orchestration", "multi-model", "agents", "ollama", "nemotron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]>=0.12",
    "litellm>=1.55",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "keyring>=25.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "anyio>=4.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "passlib[bcrypt]>=1.7",
]
nvidia = [
    "nvidia-ml-py3>=7.352.0",
]
mcp = [
    "mcp[cli]>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "passlib[bcrypt]>=1.7",
    "nvidia-ml-py3>=7.352.0",
]
vision = [
    "pyautogui>=0.9.54",
]
browser = [
    "playwright>=1.40",
]
all = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "passlib[bcrypt]>=1.7",
    "nvidia-ml-py3>=7.352.0",
    "pyautogui>=0.9.54",
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/hitechcloud-vietnam/nvHive"
Repository = "https://github.com/hitechcloud-vietnam/nvHive"
Issues = "https://github.com/hitechcloud-vietnam/nvHive/issues"

[project.scripts]
nvh = "nvh.cli.main:main"
nvhive = "nvh.cli.main:main"
nvhive-mcp = "nvh.mcp_server:main"

[tool.setuptools.packages.find]
include = ["nvh*"]

[tool.setuptools.package-data]
nvh = ["config/*.yaml", "workflows/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default per-test timeout. Any test that hangs longer than this
# fails loudly with a clear "Timeout" message instead of wedging the
# CI job for 30+ minutes. 120s is generous for the CLI subprocess
# tests which spawn `nvh` and can be slow on cold CI runners.
timeout = 120
timeout_method = "thread"
filterwarnings = [
    # aiosqlite worker thread tries to callback after event loop closes during
    # test teardown — harmless race condition, not a real error.
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    # FastAPI upstream deprecation — they need to update to HTTP_422_UNPROCESSABLE_CONTENT.
    "ignore:'HTTP_422_UNPROCESSABLE_ENTITY' is deprecated:DeprecationWarning",
    # passlib imports deprecated crypt module — upstream issue, fixed in newer passlib.
    "ignore:'crypt' is deprecated:DeprecationWarning",
]

[tool.coverage.run]
# Exclude CLI presentation layer from coverage metrics. These are
# Typer/Rich formatting wrappers that are smoke-tested via subprocess
# in test_cli_e2e.py but don't contribute meaningful coverage numbers
# (5000+ lines of print formatting at 6% drags the whole metric down).
# Business logic coverage is what matters for production reliability.
omit = [
    "nvh/cli/main.py",
    "nvh/cli/repl.py",
    "nvh/cli/completions.py",
    "nvh/cli/conversations.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
